Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23313

Android plugin tries to handle non-existent "qt_live_viewer.apk"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Qt Creator 4.11.0-rc1
    • Android Support
    • None

    Description

      These 4 failed attempts to handle the missing apk are done for each launch of an Android application.

      12:32:18: Starting C:\Users\alportal\dev\tqtc-qtc-super\qtcreator_build\bin\qtcreator.exe -installsettingspath c:\Qt\online-installer\Tools\QtCreator\share\qtcreator\ -noload all -load Android -load QmakeProjectManager -settingspath c:\temp\android...
      qtc.android.androidManager: Running command:  "c:\\Users\\alportal\\AppData\\Local\\Android\\Sdk\\build-tools\\29.0.2\\aapt.exe dump badging C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk"
      SOFT ASSERT: "d->m_accessor" in file C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\projectexplorer\toolchainmanager.cpp, line 135
      qtc.android.androidManager: Running command finshed: "c:\\Users\\alportal\\AppData\\Local\\Android\\Sdk\\build-tools\\29.0.2\\aapt.exe dump badging C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk" Success: false Output: "W/asset   ( 4728): Asset path C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk is neither a directory nor file (type=1).\r\nERROR: dump failed because assets could not be loaded\r\n"
      qtc.android.build.androiddevice: Using Qt live apk from:  "C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk" Activity Path: ""
      qtc.android.androidManager: Running command:  "c:\\Users\\alportal\\AppData\\Local\\Android\\Sdk\\build-tools\\29.0.2\\aapt.exe dump badging C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk"
      qtc.android.androidManager: Running command finshed: "c:\\Users\\alportal\\AppData\\Local\\Android\\Sdk\\build-tools\\29.0.2\\aapt.exe dump badging C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk" Success: false Output: "W/asset   ( 4056): Asset path C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk is neither a directory nor file (type=1).\r\nERROR: dump failed because assets could not be loaded\r\n"
      qtc.android.build.androiddevice: Using Qt live apk from:  "C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk" Activity Path: ""
      qtc.android.androidManager: Running command:  "c:\\Users\\alportal\\AppData\\Local\\Android\\Sdk\\build-tools\\29.0.2\\aapt.exe dump badging C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk"
      qtc.android.androidManager: Running command finshed: "c:\\Users\\alportal\\AppData\\Local\\Android\\Sdk\\build-tools\\29.0.2\\aapt.exe dump badging C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk" Success: false Output: "W/asset   ( 4668): Asset path C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk is neither a directory nor file (type=1).\r\nERROR: dump failed because assets could not be loaded\r\n"
      qtc.android.build.androiddevice: Using Qt live apk from:  "C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk" Activity Path: ""
      qtc.android.androidManager: Running command:  "c:\\Users\\alportal\\AppData\\Local\\Android\\Sdk\\build-tools\\29.0.2\\aapt.exe dump badging C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk"
      qtc.android.androidManager: Running command finshed: "c:\\Users\\alportal\\AppData\\Local\\Android\\Sdk\\build-tools\\29.0.2\\aapt.exe dump badging C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk" Success: false Output: "W/asset   ( 2892): Asset path C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk is neither a directory nor file (type=1).\r\nERROR: dump failed because assets could not be loaded\r\n"
      qtc.android.build.androiddevice: Using Qt live apk from:  "C:/Users/alportal/dev/tqtc-qtc-super/qtcreator_build/share/qtcreator/qtlive/android/armv7/qt_live_viewer.apk" Activity Path: ""
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes