Android: Don't attempt to handle a non-existing qt_live_viewer.apk

This remove 4 failed adb calls if the qt_live_viewer.apk is missing
(which it always is).

Task-number: QTCREATORBUG-23313
Change-Id: I8dbf833b35a9386d8d87f72c043dd019c62b4467
Reviewed-by: Vikas Pachdha <vikas.pachdha@qt.io>