src/plugins/android/androiddevice.cpp
@@ -56,12 +56,14 @@ AndroidDevice::AndroidDevice()
     setOsType(Utils::OsTypeOtherUnix);
 
     setDeviceState(DeviceReadyToUse);
-    QString activityPath;
     const AndroidConfig &config = AndroidConfigurations::currentConfig();
-    AndroidManager::apkInfo(config.qtLiveApkPath(), nullptr, nullptr, &activityPath);
-    qCDebug(androidDeviceLog) << "Using Qt live apk from: " << config.qtLiveApkPath()
-                              << "Activity Path:" << activityPath;
-    setQmlsceneCommand(activityPath);
+    if (config.qtLiveApkPath().exists()) {
+        QString activityPath;
+        AndroidManager::apkInfo(config.qtLiveApkPath(), nullptr, nullptr, &activityPath);
+        qCDebug(androidDeviceLog) << "Using Qt live apk from: " << config.qtLiveApkPath()
+                                  << "Activity Path:" << activityPath;
+        setQmlsceneCommand(activityPath);
+    }
 }
 
 IDevice::DeviceInfo AndroidDevice::deviceInformation() const
